Attempting to fix Skills and Footer spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -289,6 +289,7 @@ textarea {
   font-weight: bold;
   margin: 40px 40px;
   padding: 15px 0;
+  width: 100%;
  }
  
  #skill-set {
@@ -358,7 +359,7 @@ textarea {
     margin: 0 0 60px 0;
     width: 60%;
   }
- 
+
   .copyright {
     font-family: 'Philosopher';
     font-size: 0.5em;
@@ -392,7 +393,7 @@ textarea {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    width: 100%;
+    width: 85%;
   }
 
   #footer-header {
